chore: prevent taxonomy name from overflowing from background. fixes #793

--- a/assets/css/rop_core.css
+++ b/assets/css/rop_core.css
@@ -2660,7 +2660,7 @@ a.active {
     display: -webkit-inline-flex;
     display: inline-flex;
     max-width: 100%;
-    height: 1.2rem;
+    height: auto;
     margin: 0.1rem;
     padding: 0.1rem 0.5rem;
     border-radius: 5rem;
